latex syntax test

--- a/daily/11.29.md
+++ b/daily/11.29.md
@@ -6,7 +6,7 @@ Gas pressure and nozzle velocity depends on mass of the molecule and temperature
 
 Theoretical max specific impulse of hydrogen-oxygen engine is 500 sec. Space shuttle engine had impulse moment of 450 sec for combustion at $3600^oC$.
 
-Specific impulse of hydrogen plasma engine can reach 1000 sec at $1800^oC$. Hydrogen can be heated with microwaves.
+Specific impulse of hydrogen plasma engine can reach 1000 sec at \$$1800^oC$$. Hydrogen can be heated with microwaves.
 
 ### Specific impulse
 [Wiki](https://en.wikipedia.org/wiki/Specific_impulse)
@@ -15,7 +15,9 @@ Total impulse, or change in momentum per unit of propellent used.
 
 Total impulse - integral of force over time interval for which it acts.
 
-$$ J=\int F\, {d} t $$
+$$
+J=\int F\, {d} t
+$$
 
 Why is a propellent mass in newton?
 
