convert to blog

--- a/_posts/2017-11-26-sunday.md
+++ b/_posts/2017-11-26-sunday.md
@@ -1,3 +1,10 @@
+---
+layout: post
+title:  "Sunday"
+date:   2017-11-26
+categories: daily
+---
+
 ### Wordpress taxonomy
 - Taxonomy applies to posts and attachments.
 - Attachment taxonomy need a special template.
@@ -19,7 +26,7 @@ There's a table for when to hold and when to take more.
 ### 0! = 1
 [Numberphile video](https://www.youtube.com/watch?v=Mfk_L4Nx2ZI)
 
-- $0! = \frac {1!} 1$
+- $$ 0! = \frac {1!} 1 $$
 - Also, number of ways an empty set elements can be arranged.
 
 ### Glass engineering
