--- a/_posts/2017-11-27-monday.md
+++ b/_posts/2017-11-27-monday.md
@@ -1,3 +1,10 @@
+---
+layout: post
+title:  "Monday"
+date:   2017-11-27
+categories: daily
+---
+
 ### You live in a pixel
 [Wait but why](https://waitbutwhy.com/2013/11/life-is-picture-but-you-live-in-pixel.html)
 
