--- a/_posts/2017-11-25-saturday.md
+++ b/_posts/2017-11-25-saturday.md
@@ -1,3 +1,10 @@
+---
+layout: post
+title:  "Saturday"
+date:   2017-11-25
+categories: daily
+---
+
 ### Meritocracy
 
 https://www.principles.com, Ray Dalio
