--- a/_posts/2017-11-28-tuesday.md
+++ b/_posts/2017-11-28-tuesday.md
@@ -1,3 +1,10 @@
+---
+layout: post
+title:  "Tuesday"
+date:   2017-11-28
+categories: daily
+---
+
 ### Fake pro-repeal net neutrality comments
 
 [Hackernoon](https://hackernoon.com/more-than-a-million-pro-repeal-net-neutrality-comments-were-likely-faked-e9f0e3ed36a6)
