--- a/_posts/2017-11-26-sunday.md
+++ b/_posts/2017-11-26-sunday.md
@@ -26,12 +26,12 @@ There's a table for when to hold and when to take more.
 ### 0! = 1
 [Numberphile video](https://www.youtube.com/watch?v=Mfk_L4Nx2ZI)
 
-- $$ 0! = \frac {1!} 1 $$
+- \\( 0! = \frac {1!} 1 \\)
 - Also, number of ways an empty set elements can be arranged.
 
 ### Glass engineering
 [Applied Science video](https://www.youtube.com/watch?v=mUcUy7SqdS0)
 
-- Glass forms in $1200-1400^\circ C$ , which is really hot - heaters melt, silver evaporates, etc
+- Glass forms in \\( 1200-1400^\circ C \\) , which is really hot - heaters melt, silver evaporates, etc
 - Glass formation is a chemical reaction, not only melting
 - Glass is very reactive, sucks in anything it touches
