--- a/_posts/2017-11-27-monday.md
+++ b/_posts/2017-11-27-monday.md
@@ -42,14 +42,14 @@ Surprisingly Google, Facebook, Amazon and other big companies want to keep NN ar
 
 ### Dividing by 0
 
-\[
+$$
 lim^+ (\frac 1 {+0}) = +\infty
 \\
 lim^- (\frac 1 {-0}) = -\infty
-\]
+$$
 
 Depending on from which side do we approach limes, it's plus or minus infinity - the value is undefined.
 
-$0^0$ is undefined, because it breaks for complex numbers.
+\\( 0^0 \\) is undefined, because it breaks for complex numbers.
 
-$\frac 0 0$  - in the middle of XY plane, can have a lim of any value, depending on what angle do we approach it from.
+\\( \frac 0 0 \\)  - in the middle of XY plane, can have a lim of any value, depending on what angle do we approach it from.
