--- a/docs/_posts/2017-12-19-tuesday.md
+++ b/docs/_posts/2017-12-19-tuesday.md
@@ -36,3 +36,17 @@ Beautiful timelapses of Earth form ISS: https://www.youtube.com/watch?v=lNwWOul4
 [Numberphille video](https://www.youtube.com/watch?v=_YysNM2JoFo)
 
 There is a set of more and less popular numbers that show up in Encyclopedia Of Integer Series. These are usually primes, $n^2$, close to $2^n$ etc. -  numbers more liked by mathematicians.
+
+## Google Maps auto-extracting data
+[Article](https://www.justinobeirne.com/google-maps-moat)
+
+Google has very precise satellite data and fly-over data. It extracts building features and location from it. The process is automated and sometimes buildings are on the map before streets.
+
+They also extract business names and locations from street view data. Overlay this with buildings and this gives them precise locations. Then they build "areas of interest" by highlighting areas with high concentration of building including shops and cafes. All automated.
+
+Overall this gives them 5-6 years of advantage over Apple, TomTom and others.
+
+## Tesla battery in Australia helps to stabilize network after coal unit tripped
+[Article](http://reneweconomy.com.au/tesla-big-battery-outsmarts-lumbering-coal-units-after-loy-yang-trips-70003/)
+
+Big coal unit tripped in Australia. Tesla battery picked up drop in the frequency in milliseconds and helped to stabilize it way before the plant contracted to respond kicked in (6 s). The battery was not even contracted to do it.
