--- a/docs/_posts/2017-12-21-thursday.md
+++ b/docs/_posts/2017-12-21-thursday.md
@@ -21,6 +21,6 @@ Al Roth got a Nobel price in economics for work on bartering markets and matchin
 
 He worked on admission process for medical students getting internships. Students select interview with multiple hospitals, then choose "preferred" employers. Hospitals do the same and system matches. This works because all students start at the same time and all med. internships are pretty similar. Probably would work with legal, but not everywhere else.
 
-Al also work on kidney donation matching system. If you need a kidney and your spouse is willing to donate, but you're not a match, their kidney can be swapped with other pair. There's a big system matching donations into big chains (circles?) fo swaps. So far  the biggest was 36 transplants.
+Al also worked on kidney donation matching system. If you need a kidney and your spouse is willing to donate, but you're not a match, their kidney can be swapped with other pair. There's a big system matching donations into big chains (circles?) fo swaps. So far  the biggest was 36 transplants.
 
 Roth didn't try to solve kidney transplant problem - he was teaching a theoretical model of barter market based on home swap example. He was looking for a more realistic example and he found organ donations.
