--- a/docs/_posts/2017-12-30-saturday.md
+++ b/docs/_posts/2017-12-30-saturday.md
@@ -1,3 +1,10 @@
+---
+layout: post
+title:  "Saturday"
+date:   2017-12-30
+categories: daily
+---
+
 ## Medieval people walked toe-first
 [Mental floss](http://mentalfloss.com/article/505105/why-people-walked-differently-medieval-times)
 
