Update post titles

--- a/docs/_posts/2017-11-25-saturday.md
+++ b/docs/_posts/2017-11-25-saturday.md
@@ -1,11 +1,10 @@
 ---
 layout: post
-title:  "Saturday"
 date:   2017-11-25
 categories: daily
 ---
 
-### Meritocracy
+## Meritocracy
 
 https://www.principles.com, Ray Dalio
 
