--- a/docs/_posts/2017-11-28-tuesday.md
+++ b/docs/_posts/2017-11-28-tuesday.md
@@ -1,11 +1,10 @@
 ---
 layout: post
-title:  "Tuesday"
 date:   2017-11-28
 categories: daily
 ---
 
-### Fake pro-repeal net neutrality comments
+## Fake pro-repeal net neutrality comments
 
 [Hackernoon](https://hackernoon.com/more-than-a-million-pro-repeal-net-neutrality-comments-were-likely-faked-e9f0e3ed36a6)
 
@@ -20,7 +19,7 @@ DBSCAN - clusters can be any shape, as opposed to k-means, which assumes cluster
 Astro-turfing - word from fake grass to describe fake grassroots-imitation campaigns.
 
 
-### Stanford classes
+## Stanford classes
 
 - [Portraits](https://continuingstudies.stanford.edu/courses/liberal-arts-and-sciences/portraiture-telling-someone-s-story-in-a-single-image/20172_PHOTO-198)
 - [Visual storytelling](https://continuingstudies.stanford.edu/courses/liberal-arts-and-sciences/the-art-of-visual-storytelling/20172_WSP-334)
