--- a/docs/_posts/2017-11-27-monday.md
+++ b/docs/_posts/2017-11-27-monday.md
@@ -1,11 +1,10 @@
 ---
 layout: post
-title:  "Monday"
 date:   2017-11-27
 categories: daily
 ---
 
-### You live in a pixel
+## You live in a pixel
 [Wait but why](https://waitbutwhy.com/2013/11/life-is-picture-but-you-live-in-pixel.html)
 
 When something nice happens, you quickly get used to it and go back to your baseline. It's hard to see where you are from a single day (pixel) perspective. Dingle pixel will always look mundane, need to accept that and learn to look at the bigger picture.
@@ -15,7 +14,7 @@ Proven ways to feel better:
 - [happy thoughts](http://www.bakadesuyo.com/2012/08/here-are-the-things-that-are-proven-to-make-y/)
 
 
-### Mentally subtracting positive events
+## Mentally subtracting positive events
 
 [Research paper](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2746912/)
 
@@ -23,14 +22,14 @@ Thinking about how a positive event could easily be missed, or could never have 
 
 People can't predict this effect correctly.
 
-### Virginity test in Indonesian army
+## Virginity test in Indonesian army
 [Human Rights Watch](https://www.hrw.org/news/2017/11/22/indonesia-no-end-abusive-virginity-tests)
 
 Before joining Indonesian army women are tested for virginity, to determine their morality.
 
 Virginity tests are a violation of human rights, "cruel, inhuman or degrading treatment".
 
-### Net neutrality competition
+## Net neutrality competition
 
 [Article on Foundation for Economic Education](https://fee.org/articles/goodbye-net-neutrality-hello-competition/)
 
@@ -40,7 +39,7 @@ Big ISPs like it because entry level for potential competition is high and there
 
 Surprisingly Google, Facebook, Amazon and other big companies want to keep NN around too. Why?
 
-### Dividing by 0
+## Dividing by 0
 
 $$
 lim^+ (\frac 1 {+0}) = +\infty
