--- a/docs/_posts/2018-01-16-tuesday.md
+++ b/docs/_posts/2018-01-16-tuesday.md
@@ -1,3 +1,9 @@
+---
+layout: post
+date:   2018-01-16
+categories: daily
+---
+
 ## 1+2+3+... = -1/12
 
 [Mathlogger video](https://www.youtube.com/watch?v=YuIIjLr6vUA)
