--- a/docs/_posts/2018-02-07.md
+++ b/docs/_posts/2018-02-07.md
@@ -1,3 +1,9 @@
+---
+layout: post
+date:   2018-02-07
+categories: daily
+---
+
 ## Ignore sunk clowns
 [Seth's blog](http://sethgodin.typepad.com/seths_blog/2018/02/ignore-sunk-clowns.html)
 
