Organize by year

--- a/docs/_posts/2018/2018-02-27-tuesday.md
+++ b/docs/_posts/2018/2018-02-27-tuesday.md
@@ -1,3 +1,9 @@
+---
+layout: post
+date:   2018-02-27
+categories: daily
+---
+
 ## Diapers
 [Engineer guy](https://www.youtube.com/watch?v=xYNX8y6lQMc)
 
