--- a/_posts/2017/2017-11-25-saturday.md
+++ b/_posts/2017/2017-11-25-saturday.md
@@ -6,6 +6,7 @@ categories: daily
 
 ## Meritocracy
 
+[Ted talk](https://www.ted.com/talks/ray_dalio_how_to_build_a_company_where_the_best_ideas_win?language=en)
 https://www.principles.com, Ray Dalio
 
 - investment fund running over 25 years
