--- a/_posts/2017/2017-11-27-monday.md
+++ b/_posts/2017/2017-11-27-monday.md
@@ -7,7 +7,7 @@ categories: daily
 ## You live in a pixel
 [Wait but why](https://waitbutwhy.com/2013/11/life-is-picture-but-you-live-in-pixel.html)
 
-When something nice happens, you quickly get used to it and go back to your baseline. It's hard to see where you are from a single day (pixel) perspective. Dingle pixel will always look mundane, need to accept that and learn to look at the bigger picture.
+When something nice happens, you quickly get used to it and go back to your baseline. It's hard to see where you are from a single day (pixel) perspective. Single pixel will always look mundane, need to accept that and learn to look at the bigger picture.
 
 Proven ways to feel better:
 - sport, sleeping well, meeting with people
