--- a/_posts/2017/2017-11-30-thursday.md
+++ b/_posts/2017/2017-11-30-thursday.md
@@ -32,13 +32,13 @@ Plan for pushing a meteor from collision course with Earth. A ship used for that
 
 Launch vehicle - SLS, or Falcon Heavy. SLS cargo to LEO is 70-130 T [wiki](https://en.wikipedia.org/wiki/Space_Launch_System) and Falcon Heavy's cargo to LEO is 64 T.
 
-## 30 mile zone i Hollywood
+## 30 mile zone in Hollywood
 
 [Half as interesting video](https://www.youtube.com/watch?v=-gfGtIHfU7A)
 
 Almost all Hollywood actors and crew unions count working "delegation" as more than 30 miles from an old headquarters of the organization. Almost all movies are shot < 30 miles from an intersection in downtown LA.
 
-## Pressure matrix yoga matrix
+## Pressure matrix yoga mat
 
 [Macro Reps video](https://www.youtube.com/watch?v=4JBSHqUcaG4)
 
