--- a/_posts/2017/2017-12-11-monday.md
+++ b/_posts/2017/2017-12-11-monday.md
@@ -15,7 +15,7 @@ Fajne zdjęcia.
 - [Wyprawa balonem](http://joemonster.org/art/41626/O_tym_jak_Szwedzi_usilowali_zdobyc_biegun_polnocny_za_pomoca_balona) - Norweska, na biegun północny.
 
 ## Mill CPU architecture
-(Stanford lectures)[https://www.youtube.com/watch?v=LgLNyMAi-0I&list=PLFls3Q5bBInj_FfNLrV7gGdVtikeGoUc9]
+[Stanford lectures](https://www.youtube.com/watch?v=LgLNyMAi-0I&list=PLFls3Q5bBInj_FfNLrV7gGdVtikeGoUc9)
 
 ## Language of Whales
 [TedX talk](https://www.youtube.com/watch?v=JM77aTk1XyI)
@@ -25,7 +25,7 @@ Sperm whales use clicks for echolocation and communication. Sperm whales are wea
 Whales are hunted by Iceland and Japan. 70% of population is gone. If we're able to prove that the wales are intelligent and can speak their name, it will be much harder to kill them.
 
 ## First day in prison
-(Quora answer)[https://www.quora.com/What-does-the-first-day-of-a-5%2B-year-prison-sentence-feel-like/answer/Kenyatta-Leal?srid=nYce] by a guy rehabilitated trough Last Mile entrepreneur program.
+[Quora answer](https://www.quora.com/What-does-the-first-day-of-a-5%2B-year-prison-sentence-feel-like/answer/Kenyatta-Leal?srid=nYce) by a guy rehabilitated trough Last Mile entrepreneur program.
 
 ## Donald Knuth on tight pavings
 [Stanford lecture](http://scpd.stanford.edu/free-stuff/live-webinars-lectures/donald-knuths-annual-christmas-lecture)
