--- a/_posts/2017/2017-12-22-friday.md
+++ b/_posts/2017/2017-12-22-friday.md
@@ -5,4 +5,4 @@ categories: daily
 ---
 
 ## Open Paperless doc organization
-https://github.com/zhoubear/open-paperless - catalogs documents and scans, OCR, tags and search.
+[Open Paperless](https://github.com/zhoubear/open-paperless) - catalogs documents and scans, OCR, tags and search.
