Fix another link

--- a/_posts/2017/2017-12-19-tuesday.md
+++ b/_posts/2017/2017-12-19-tuesday.md
@@ -29,7 +29,7 @@ Sphere around a star that harvests it's energy.
 It should be a swarm not to collapse. It could be made from Mercury's iron core converted to hematite (highly reflective, used as primitive mirrors).
 
 ## Alexander Gerst’s Earth timelapses
-Beautiful timelapses of Earth form ISS: https://www.youtube.com/watch?v=lNwWOul4i9Y
+Beautiful timelapses of Earth form ISS [here](https://www.youtube.com/watch?v=lNwWOul4i9Y).
 
 ## Sloane's gap
 [Numberphille video](https://www.youtube.com/watch?v=_YysNM2JoFo)
